--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -21,6 +21,8 @@
 
 body {
   background: var(--light);
+  cursor: none;
+  // height: 100vh;
 }
 
 button {
@@ -36,9 +38,69 @@ button {
   main {
     flex: 1 1 0;
     padding: 2rem;
+    overflow: hidden;
 
     @media screens and (max-width: 768px) {
       padding-left: 6rem;
     }
+  }
+}
+
+.cursor {
+  width: 20px;
+  height: 20px;
+  border: 1px solid white;
+  border-radius: 50%;
+  position: absolute;
+  transition: 150ms ease-out;
+  animation: cursorAnim 0.5s infinite alternate;
+}
+
+.cursor::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  border: 8px solid grey;
+  border-radius: 50%;
+  opacity: 0.5;
+  top: -8px;
+  left: -8px;
+  animation: cursorAfterEffect 0.5s infinite alternate;
+}
+
+.expands {
+  animation: clickExpands 0.5s forwards;
+  border: 1px solid red;
+}
+
+@keyframes cursorAnim {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0.7);
+  }
+}
+
+@keyframes cursorAfterEffect {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0.4);
+  }
+}
+
+@keyframes clickExpands {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(3);
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
   }
 }
