--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,7 +4,7 @@
 
 :root {
   --primary: #444;
-  --primary-alt: #444;
+  --primary-alt: #36454F;
   --grey: #64748b;
   --dark: #334155;
   --dark-alt: #1e293b;
@@ -20,44 +20,23 @@
 }
 
 body {
-  background: var(--dark);
+  margin:0;
+  padding: 0;
+  background: var(--light);
   height: 100vh;
   cursor: none;
 }
 
-
-/** Playful Cursor **/
-// .cursor-dot {
-//   width:5px;
-//   height: 5px;
-//   background-color: var(--light);
-// }
-
-// .cursor-outline {
-//   width: 30px;
-//   height: 30px;
-//   border: 2px solid hsla(0, 0%, 100%, 0.5)
-// }
-
-// .cursor-outline, .cursor-dot {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   transform: translate(-50%, -50%);
-//   border-radius: 50%;
-//   z-index: 100000000000000;
-//   pointer-events: none;
-// }
-
 /** End Playful Cursor **/
 
 button {
-  cursor: pointer;
+  // cursor: pointer;
   appearance: none;
   border: none;
   outline: none;
   background: none;
 }
+
 .app {
   display: flex;
 
@@ -75,25 +54,30 @@ button {
 
 /** Cursor **/
 .cursor {
-  width: 20px;
-  height: 20px;
-  border: 1px solid white;
-  border-radius: 50%;
+  width: 1rem;
+  height: 1rem;
   position: absolute;
-  transition: 150ms ease-out;
+  transform: translate(-50%, -50%);
+  border: 2px solid var(--dark);
+  border-radius: 50%;
+  pointer-events: none;
+  top: -1rem;
+  left: -1rem;
   animation: cursorAnim 0.5s infinite alternate;
 }
 
 .cursor::after {
   content: "";
-  width: 20px;
-  height: 20px;
+  width: 1rem;
+  height: 1rem;
   position: absolute;
-  border: 8px solid grey;
+  transform: translate(-50%, -50%);
+  border: 6px solid var(--dark);
   border-radius: 50%;
-  opacity: 0.5;
-  top: -8px;
-  left: -8px;
+  pointer-events: none;
+  opacity: 0.3;
+  top: -1rem;
+  left: -1rem;
   animation: cursorAfterEffect 0.5s infinite alternate;
 }
 
@@ -111,24 +95,24 @@ button {
   }
 }
 
-@keyframes cursorAfterEffect {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(0.4);
-  }
-}
+// @keyframes cursorAfterEffect {
+//   from {
+//     transform: scale(1);
+//   }
+//   to {
+//     transform: scale(0.4);
+//   }
+// }
 
 @keyframes clickExpands {
   0% {
-    transform: scale(1);
+    transform: scale(.5);
   }
   50% {
-    transform: scale(3);
+    transform: scale(1);
   }
   100% {
-    transform: scale(1);
+    transform: scale(.5);
     opacity: 0;
   }
 }
