deployment: start on the test on first deploy

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -44,6 +44,8 @@ button {
     flex: 1 1 0;
     padding: 2rem;
     overflow: hidden;
+    background-color: #808080;
+    height: 100vh;
 
     @media screens and (max-width: 768px) {
       padding-left: 6rem;
