--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -25,7 +25,7 @@ body {
   box-sizing: border-box;
   background: var(--light);
   height: 100vh;
-  cursor: none;
+  // cursor: none;
 }
 
 /** End Playful Cursor **/
