--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,107 +2,119 @@
 // @tailwind components;
 // @tailwind utilities;
 
-:root {
-  --primary: #444;
-  --primary-alt: #36454F;
-  --grey: #64748b;
-  --dark: #334155;
-  --dark-alt: #1e293b;
-  --light: #f1f5f9;
-  --sidebar-width: 300px;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Fira sans", sans-serif;
 }
 
 body {
-  margin:0;
-  padding: 0;
-  box-sizing: border-box;
-  background: var(--light);
+  width: 100vw;
   height: 100vh;
-  // cursor: none;
+  position: relative;
 }
 
-/** End Playful Cursor **/
+// :root {
+//   --primary: #444;
+//   --primary-alt: #36454F;
+//   --grey: #64748b;
+//   --dark: #334155;
+//   --dark-alt: #1e293b;
+//   --light: #f1f5f9;
+//   --sidebar-width: 300px;
+// }
 
-button {
-  appearance: none;
-  border: none;
-  outline: none;
-  background: none;
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+//   font-family: "Fira sans", sans-serif;
+// }
 
-a {
-  text-decoration: none;
-  color: black;
-}
+// body {
+//   margin:0;
+//   padding: 0;
+//   box-sizing: border-box;
+//   background: var(--light);
+//   height: 100vh;
+//   // cursor: none;
+// }
 
-.app {
-  display: flex;
-  // background-color: yellow;
+// /** End Playful Cursor **/
 
-  main {
-    // flex: 1 1 0;
-    padding: 2rem;
-    overflow: hidden;
-    background-color: #808080;
-    height: 100vh;
-    // width: 100%;
+// button {
+//   appearance: none;
+//   border: none;
+//   outline: none;
+//   background: none;
+// }
 
-    @media screens and (max-width: 768px) {
-      padding-left: 6rem;
-    }
-  }
-}
+// a {
+//   text-decoration: none;
+//   color: black;
+// }
+
+// .app {
+//   display: flex;
+//   // background-color: yellow;
+
+//   main {
+//     // flex: 1 1 0;
+//     padding: 2rem;
+//     overflow: hidden;
+//     background-color: #808080;
+//     height: 100vh;
+//     // width: 100%;
+
+//     @media screens and (max-width: 768px) {
+//       padding-left: 6rem;
+//     }
+//   }
+// }
 
 
-/** Cursor **/
-.cursor {
-  width: 1rem;
-  height: 1rem;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  border: 2px solid var(--dark);
-  border-radius: 50%;
-  pointer-events: none;
-  top: -1rem;
-  left: -1rem;
-  animation: cursorAnim 0.5s infinite alternate;
-}
+// /** Cursor **/
+// .cursor {
+//   width: 1rem;
+//   height: 1rem;
+//   position: absolute;
+//   transform: translate(-50%, -50%);
+//   border: 2px solid var(--dark);
+//   border-radius: 50%;
+//   pointer-events: none;
+//   top: -1rem;
+//   left: -1rem;
+//   animation: cursorAnim 0.5s infinite alternate;
+// }
 
-.cursor::after {
-  content: "";
-  width: 1rem;
-  height: 1rem;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  border: 6px solid var(--dark);
-  border-radius: 50%;
-  pointer-events: none;
-  opacity: 0.3;
-  top: -1rem;
-  left: -1rem;
-  animation: cursorAfterEffect 0.5s infinite alternate;
-}
+// .cursor::after {
+//   content: "";
+//   width: 1rem;
+//   height: 1rem;
+//   position: absolute;
+//   transform: translate(-50%, -50%);
+//   border: 6px solid var(--dark);
+//   border-radius: 50%;
+//   pointer-events: none;
+//   opacity: 0.3;
+//   top: -1rem;
+//   left: -1rem;
+//   animation: cursorAfterEffect 0.5s infinite alternate;
+// }
 
-.expands {
-  animation: clickExpands 0.5s forwards;
-  border: 1px solid red;
-}
+// .expands {
+//   animation: clickExpands 0.5s forwards;
+//   border: 1px solid red;
+// }
 
-@keyframes cursorAnim {
-  from {
-    transform: scale(1);
-  }
-  to {
-    transform: scale(0.7);
-  }
-}
+// @keyframes cursorAnim {
+//   from {
+//     transform: scale(1);
+//   }
+//   to {
+//     transform: scale(0.7);
+//   }
+// }
 
 // @keyframes cursorAfterEffect {
 //   from {
@@ -113,16 +125,16 @@ a {
 //   }
 // }
 
-@keyframes clickExpands {
-  0% {
-    transform: scale(.5);
-  }
-  50% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(.5);
-    opacity: 0;
-  }
-}
+// @keyframes clickExpands {
+//   0% {
+//     transform: scale(.5);
+//   }
+//   50% {
+//     transform: scale(1);
+//   }
+//   100% {
+//     transform: scale(.5);
+//     opacity: 0;
+//   }
+// }
 /** End Cursor **/
