--- a/src/assets/scss/components/carousel.scss
+++ b/src/assets/scss/components/carousel.scss
@@ -3,16 +3,18 @@
 .carousel-container {
     padding-bottom: 2em;
 
-    border: red 1px solid;
     .carousel-container-slide {
         display: block;
-        background-color: $base-background-hover;
         width: 100%;
         height: 50vh;
         padding-top: 1em;
         padding-bottom: 1em;
         border-radius: .3em;
     
-        border: green 1px solid;
+        border: $base-background-hover 1px solid;
+
+        li {
+            text-decoration: none;
+        }
     }
 }
