update: list of updating roles and what I do

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -40,4 +40,5 @@ li {
 
 
 @import "./components/homepage.scss";
-@import "./components/carousel.scss"
+@import "./components/carousel.scss";
+@import "./components/cursor.scss"
