update: working on projects page

--- a/src/assets/scss/components/project.scss
+++ b/src/assets/scss/components/project.scss
@@ -21,6 +21,7 @@ $height: calc(1080/6);
             display: flex;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
 
             img {
                 width: 100%;
