--- a/src/assets/scss/components/project.scss
+++ b/src/assets/scss/components/project.scss
@@ -22,12 +22,23 @@ $height: calc(1080/6);
             justify-content: center;
             align-items: center;
             cursor: pointer;
+            position: relative;
 
             img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 border-radius: .8em;
+
+                display: block;
+            }
+
+            .description {
+                position: absolute;
+                background: $base-background-shadow;
+                z-index: 2;
+                bottom: 0;
+                width: 100%;
             }
         }
 
