--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -67,3 +67,4 @@ button {
 @import "./components/project.scss";
 @import "./components/carousel.scss";
 @import "./components/cursor.scss";
+@import "./components/modal.scss";
