--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,6 +9,7 @@ $base-text-light: #ffffff;
 $base-text-special-span: #964b00;
 $base-text-normal-span: #c99a6b;
 $base-background-shadow: #22222290;
+$straight-line: #039BCF;
 
 * {
   margin: 0;
@@ -65,6 +66,9 @@ button {
 
 @import "./components/homepage.scss";
 @import "./components/project.scss";
+@import "./components/education.scss";
+@import "./components/experience.scss";
+@import "./components/stack.scss";
 @import "./components/carousel.scss";
 @import "./components/cursor.scss";
 @import "./components/modal.scss";
