update: project has been reviewed incoming design

--- a/src/assets/scss/components/project.scss
+++ b/src/assets/scss/components/project.scss
@@ -22,7 +22,7 @@ $height: calc(1080/6);
             display: flex;
             justify-content: center;
             align-items: center;
-            cursor: pointer;
+            // cursor: pointer;
             position: relative;
 
             img {
