--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -85,11 +85,36 @@ button {
   padding: .2em .3em;
 }
 
+input[type=text], [type=email], textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
 @import "./components/homepage.scss";
 @import "./components/project.scss";
 @import "./components/education.scss";
 @import "./components/experience.scss";
 @import "./components/project_detail.scss";
+@import "./components/contact.scss";
 @import "./components/stack.scss";
 @import "./components/carousel.scss";
 @import "./components/cursor.scss";
