--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -119,3 +119,21 @@ input[type=submit]:hover {
 @import "./components/carousel.scss";
 @import "./components/cursor.scss";
 @import "./components/modal.scss";
+
+
+.mobile_not_present {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  padding: 2em;
+  background: $base-background-color;
+  color: $base-text-color;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  font-family: 'Bellota';
+  font-weight: 700;
+  font-size: 1.3em;
+}
